[package]
name        = "rustdx"
version     = "0.4.0"
edition     = "2021"
license     = "MIT"
description = "受 pytdx 启发的 A 股数据获取库"
repository  = "https://github.com/zjp-CN/rustdx"
authors     = ["zjp <jiping_zhou@foxmail.com>"]
exclude     = [
                "assets", "examples", "benches", "tests", "old",
                "CHANGELOG.md", "*.csv", "*.log", ".github", ".gitignore",
                "rustfmt.toml", "LICENSE"
              ]

[dependencies]
chrono  = "0.4"
lazy_static = "1"
miniz_oxide = "0.7"
thiserror = "1"
log = "0.4"

[dependencies.serde]
version  = "1"
features = ["derive"]

[dependencies.encoding_rs]
version  = "0.8"
features = ["fast-gb-hanzi-encode"]

[dev-dependencies]
insta = "1"
csv = "1"

[profile.bench]
lto = true
opt-level = 3

[profile.release]
lto = true
opt-level = 3

[workspace]
members = ["rustdx-cmd"]

[package.metadata.docs.rs]
all-features = true
