[package]
name        = "rustdx"
version     = "0.4.0"
edition     = "2021"
license     = "MIT"
description = "受 pytdx 启发的 A 股数据获取库"
repository  = "https://github.com/zjp-CN/rustdx"
authors     = ["zjp <jiping_zhou@foxmail.com>"]
exclude     = [
                "assets", "examples", "benches", "tests", "old", "tests-integration",
                "CHANGELOG.md", "*.csv", "*.log", ".github", ".gitignore",
                "rustfmt.toml", "LICENSE"
              ]

[dependencies]
miniz_oxide = "0.7"
log = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }

[dependencies.encoding_rs]
version  = "0.8"
features = ["fast-gb-hanzi-encode"]

[dev-dependencies]
insta = "1"
csv = "1"

[profile.test]
opt-level = 3

[profile.bench]
lto = true
opt-level = 3

[profile.release]
lto = true
opt-level = 3

[workspace]
members = ["rustdx-cmd", "tests-integration"]

[workspace.dependencies]
log = "0.4"
chrono  = "0.4"
thiserror = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
