[package]
name        = "rustdx-cmd"
version     = "0.3.0"
edition     = "2018"
license     = "MIT"
build       = "build.rs"
readme      = "../README.md"
description = "受 pytdx 启发的 A 股数据获取库"
repository  = "https://github.com/zjp-CN/rustdx"
authors     = ["zjp <jiping_zhou@foxmail.com>"]
exclude     = [
                "assets", "examples", "benches", "tests", "rustdx.log", "*.csv",
                "LICENSE-MIT", "rustfmt.toml"
              ]

[dependencies]
anyhow   = "1"
argh     = {version = "0.1" }
calamine = {version = "0.19"}
futures  = {version = "0.3" }
tokio    = {version = "1", features = ["rt-multi-thread", "macros"]   }
# rustdx   = {path    = "../" }
reqwest  = {version = "0.11"}
bytes    = {version = "1.1" }
csv      = {version = "1.1" }
log      = {version = "0.4" }
chrono   = {version = "0.4" }
serde_json  = {version = "1"}
lazy_static = {version = "1"}
mini-redis  = {version = "0.4"}
subprocess  = {version = "0.2"}
simplelog   = {version ="0.12"}
miniz_oxide = {version ="0.7"}

[dependencies.rustdx]
version  = "0.3.0"
path = "../"

[dependencies.serde]
version  = "1"
features = ["derive"]

[[bin]]
name = "rustdx"
path = "src/main.rs"

