[package]
name        = "rustdx-cmd"
version     = "0.4.0"
edition     = "2021"
license     = "MIT"
build       = "build.rs"
readme      = "../README.md"
description = "受 pytdx 启发的 A 股数据获取库"
repository  = "https://github.com/zjp-CN/rustdx"
authors     = ["zjp <jiping_zhou@foxmail.com>"]
exclude     = [
                "assets", "examples", "benches", "tests", "rustdx.log", "*.csv",
                "LICENSE-MIT", "rustfmt.toml"
              ]

[dependencies]
anyhow   = "1"
argh     = "0.1"
calamine = "0.19"
csv      = "1.1"
log      = "0.4"
chrono   = "0.4"
serde_json  = "1"
lazy_static = "1"
subprocess  = "0.2"
miniz_oxide = "0.7"

[dependencies.rustdx]
version  = "0.4.0"
path = "../"

[dependencies.serde]
version  = "1"
features = ["derive"]

[dependencies.ureq]
version = "2"
default_features = false
features = ["rustls"] 

[[bin]]
name = "rustdx"
path = "src/main.rs"

