[package]
name        = "rustdx-cmd"
version     = "0.5.0"
edition     = "2021"
license     = "MIT"
build       = "build.rs"
readme      = "../README.md"
description = "受 pytdx 启发的 A 股数据获取库"
repository  = "https://github.com/zjp-CN/rustdx"
authors     = ["zjp <jiping_zhou@foxmail.com>"]
exclude     = [
                "assets", "examples", "benches", "tests", "rustdx.log", "*.csv",
                "LICENSE-MIT", "rustfmt.toml"
              ]

[dependencies]
eyre = "0.6"
argh = "0.1"
csv  = "1.1"
calamine = "0.25"
subprocess = "0.2"
serde_json = "1"
env_logger = "0.11"

log = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dependencies.rustdx-complete]
version  = "0.5.0"
path = "../"

[dependencies.ureq]
version = "2"
default-features = false
features = ["rustls"] 

[[bin]]
name = "rustdx"
path = "src/main.rs"

